Adjusted QR CSS
Made a slight adjustment to the padding and sizing of the card and card image. Added a description to the root html index.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <p>Hello World!</p>
+    <h1>Hello World!</h1><br>
+    <h1>Introduction</h1>
+    <p>In this repository, I'll be keeping all the projects I've done for the <a
+            href="https://www.frontendmentor.io/profile/GoatEXE">Frontend
+            Mentor</a> community. I find it annoying to keep up with so many
+        repositories, so this is easier for me to manage.</p>
+
+
+    <h1>Usage</h1>
+    <p>The index.html file within root is hosted by default, but you can plug in any named directory to view any project
+        you're interested in. For example: `https://goatexe.github.io/Frontend-Mentor/1-qr-code/` will take you to my
+        day 1 <a href="https://goatexe.github.io/Frontend-Mentor/1-qr-code/">example project</a>. Replace the
+        `1-qr-code` portion
+        of the URL with the actual directory name. </p>
+
 </body>
+
 </html>
