Added blog preview card
Day 2 addition for the blog card preview.  Added hover CSS animations involving card shadow and transition.

--- a/1-qr-code/index.html
+++ b/1-qr-code/index.html
@@ -28,8 +28,7 @@
 
   <footer>
     <div class="attribution position-absolute bottom-0 start-50 translate-middle-x">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
+      Challenge by Frontend Mentor. Coded by
       <a href="https://www.frontendmentor.io/profile/GoatEXE">GoatEXE</a>.
     </div>
   </footer>
